--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ function createImgRoll(src) {
                 preffix = "https://cdn.luogu.com.cn/upload/image_hosting/";
         } else if (src == 1) {
                 name = ["1", "2", "3", "4", "5", "6", "7", "8"];
-                preffix = "https://XiEn1847.github.io/images/pray/";
+                preffix = "https://XiEn1847.github.io/PrayingGifGenerator/images/pray/";
         } else if (src == 2) {
                 name = ["1", "2", "3", "4", "5", "6", "7", "8"];
                 preffix = "https://gcore.jsdelivr.net/gh/XiEn1847/XiEn1847.github.io/images/pray/";
