--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
         <meta charset="UTF-8">
         <title>sto xx orz</title>
+        <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
         <meta name="renderer" content="webkit">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -13,9 +14,8 @@
 <span title="owo!"><h1>Keke Tang Praying Gif Generator</h1></span>
 
 <h2>杂谈</h2>
-
 缝合了一车代码整出来的奇怪小玩意<br/>
-参考的各种内容: 
+参考的各种内容: <br/>
 <ol>
         <li><a href="https://yandex.com/search/?text=love+live+superstar+episode+3+no+subtitles">伟大的</a></li>
         <li><a href="https://zh.clippingmagic.com">抠图的</a></li>
@@ -28,36 +28,32 @@
 </ol>
 fun fact: 原图在 lovelive sunshine episode3 的 09:43 处<br/>
 bug: 帧间距小于 20ms 时并不能正常生成（非常快的）gif<br/>
+tip: 如果它卡住了，请按 F12 打开“网络”选项卡，然后刷新页面重试，以此检查是否存在网络问题<br/>
+ad: 墙裂推荐阅读 <a href="https://www.webtoons.com/en/challenge/caelum-sky/list?title_no=351151">Caelum Sky</a>！<br/>
 
 <h2>生成器！</h2>
-
 <ol>
-<li>
-选取一个图像文件: <input type="file" id="fileupl"/><br/>
-<div id="uplresult"></div><br/>
-</li>
-
-<li>
-设置两帧的间隔（现在是 <span id="speedviewer">45</span>ms）:
-<input type="number" id="framespd" placeholder="45" min="1"/>
-<button type="button" onclick="updFrameSpd()">更新</button><br/>
-</li>
-
-<li>
-设置图床：
-<select onChange="changeImgOrigin(this.selectedIndex);">
-<option>luogu（推荐）</option>
-<option>github（GFW 内访问缓慢）</option>
-<option selected="selected">jsdelivr（可能挂掉了）</option>
-</select><br/>
-</li>
-
-
-<li>
-生成 GIF（预计 5~20s）：<button type="button" id="genGIF" disabled=true>点我</button><br/>
-<img class="result-gif" width="667" height="375" src="">
-</li>
-
+        <li>
+                选取一个图像文件: <input type="file" id="fileupl"/><br/>
+                <div id="uplresult"></div><br/>
+        </li>
+        <li>
+                设置两帧的间隔（现在是 <span id="speedviewer">45</span>ms）:
+                <input type="number" id="framespd" placeholder="45" min="1"/>
+                <button type="button" onclick="updFrameSpd()">更新</button><br/>
+        </li>
+        <li>
+                设置图床：
+                <select onChange="changeImgOrigin(this.selectedIndex);">
+                        <option>luogu（推荐）</option>
+                        <option>github（GFW 内访问缓慢）</option>
+                        <option selected="selected">jsdelivr（可能挂掉了）</option>
+                </select><br/>
+        </li>
+        <li>
+                生成 GIF（预计 5~20s）：<button type="button" id="genGIF" disabled=true>点我</button><br/>
+                <img class="result-gif" width="667" height="375" src="">
+        </li>
 </ol>
 
 
@@ -90,7 +86,7 @@ function createImgRoll(src) {
                 preffix = "https://raw.githubusercontent.com/XiEn1847/PrayingGifGenerator/main/images/pray/";
         } else if (src == 2) {
                 name = ["1", "2", "3", "4", "5", "6", "7", "8"];
-                preffix = "https://gcore.jsdelivr.net/gh/XiEn1847/PrayingGifGenerator/main/images/pray/";
+                preffix = "https://gcore.jsdelivr.net/gh/XiEn1847/PrayingGifGenerator/images/pray/";
         }
         for (let i = 0; i <= 7; i++) { ret.push(initImg(preffix + name[i] + ".png")); }
         for (let i = 6; i >= 1; i--) { ret.push(initImg(preffix + name[i] + ".png")); }
