--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
         <meta charset="UTF-8">
         <title>sto xx orz</title>
-        <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+        <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/XiEn1847/PrayingGifGenerator/main/images/favicon.ico">
         <meta name="renderer" content="webkit">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
