--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ function createImgRoll(src) {
                 name = ["1", "2", "3", "4", "5", "6", "7", "8"];
                 preffix = "https://gcore.jsdelivr.net/gh/XiEn1847/PrayingGifGenerator/images/pray/";
         } else if (src == 3) {
-                name = ["pPktKZ8","pPkt3Gj","pPkt1iQ","pPktMdS","pPktQIg","pPkt8Rs","pPktGzn","pPktYMq";
+                name = ["pPktKZ8","pPkt3Gj","pPkt1iQ","pPktMdS","pPktQIg","pPkt8Rs","pPktGzn","pPktYMq"];
                 preffix = "https://s1.ax1x.com/2023/08/05/";
         }
         for (let i = 0; i <= 7; i++) { ret.push(initImg(preffix + name[i] + ".png")); }
