--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
         <meta charset="UTF-8">
         <title>sto xx orz</title>
-        <link rel="icon" type="image/x-icon" href="./images/favicon.ico">
+        <link rel="icon" type="image/x-icon" href="../images/favicon.ico">
         <meta name="renderer" content="webkit">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-        <script src="./gifjs/gif.js"></script>
+        <script src="../gifjs/gif.js"></script>
 </head>
 <body>
 
@@ -86,7 +86,7 @@ function createImgRoll(src) {
                 preffix = "https://cdn.luogu.com.cn/upload/image_hosting/";
         } else if (src == 1) {
                 name = ["1", "2", "3", "4", "5", "6", "7", "8"];
-                preffix = "./images/pray/";
+                preffix = "../images/pray/";
         } else if (src == 2) {
                 name = ["1", "2", "3", "4", "5", "6", "7", "8"];
                 preffix = "https://gcore.jsdelivr.net/gh/XiEn1847/PrayingGifGenerator/images/pray/";
@@ -120,7 +120,7 @@ function createGif() {
                                                         height: h,
                                                         workers: 2,
                                                         quality: 10,
-                                                        workerScript: './gifjs/gif.worker.js'
+                                                        workerScript: '../gifjs/gif.worker.js'
                                                 });
 
         let canvas = document.createElement('canvas');
