--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ tip: <b>真的很慢很慢！</b>建议把图床都试一遍<br/>
                 </select><br/>
         </li>
         <li>
-                生成 GIF（预计 3~60s，取决于网络环境）：<button type="button" id="genGIF" disabled=true>点我</button><div id="genstatus1"></div><div id="genstatus2"></div><div id="genstatus3"></div><br/>
+                生成 GIF（预计 3~60s，取决于网络环境）：<button type="button" id="genGIF" disabled=true>点我</button> <a id="genstatus1"></a><a id="genstatus2"></a><a id="genstatus3"></a><br/>
                 <img class="result-gif" width="667" height="375" src="">
         </li>
 </ol>
@@ -73,7 +73,7 @@ function initImg(name) {
         return new Promise(resolve => {
                 let img = new Image();
                 img.setAttribute("crossOrigin", "anonymous");
-                img.onload = img.onerror = () => { resolve(img); document.getElementById("genstatus2").innerText = toString(parseInt(document.getElementById("genstatus2").innerText) + 1); };
+                img.onload = img.onerror = () => { resolve(img); document.getElementById("genstatus2").innerText = (parseInt(document.getElementById("genstatus2").innerText) + 1).toString(); };
                 img.src = name;
         })
 }
@@ -114,9 +114,7 @@ function drawTrapezoidV(ctx, img, x, y, w, h, factor) {
 
 
 function createGif() {
-        document.getElementById("genstatus1").innerText = "loading images:";
-        document.getElementById("genstatus2").innerText = "0";
-        document.getElementById("genstatus3").innerText = "/14";
+        
         let ret = createImgRoll(imgsrc);
         let praygif = new GIF({
                                                         width: w,
@@ -134,7 +132,12 @@ function createGif() {
         let upimg = new Image();
         upimg.src = imgb64;
 
+        document.getElementById("genstatus1").innerText = " loading images:";
+        document.getElementById("genstatus2").innerText = "0";
+        document.getElementById("genstatus3").innerText = "/14";
+
         Promise.all(ret).then(value => {
+
                 value.forEach((value1, index) => {
         
                         // draw
@@ -151,11 +154,17 @@ function createGif() {
                         });
                 });
 
+                document.getElementById("genstatus1").innerText = " generating GIF";
+                document.getElementById("genstatus2").innerText = "";
+                document.getElementById("genstatus3").innerText = "";
+
                 praygif.on('finished', function (blob) {
                         console.log(blob);
                         document.querySelector(".result-gif").src = URL.createObjectURL(blob);
                 });
                 praygif.render();
+
+                document.getElementById("genstatus1").innerText = " finished";
         });
 }
 
